Fixed the overflow problem. It was caused by a whitespace flag.

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -156,7 +156,7 @@ ul li,ol li {padding-left: 5px}
 	height:0px;
 	overflow:hidden;
 	padding-left:7px;
-	white-space:nowrap;
+
 }
 .ticketCreatedOnBox,.ticketCreatedByBox,.ticketCategoryBox,.ticketLocationBox{
 	bottom:0;
